fix(ui): ellipsis overflow handling

--- a/ui/src/css/q-calendar.sass
+++ b/ui/src/css/q-calendar.sass
@@ -66,6 +66,7 @@
     align-items: center
 
   &__ellipsis
+    white-space: nowrap
     text-overflow: ellipsis
     overflow: hidden
 
